--- a/src/css/vertical-layout-light/_navbar.scss
+++ b/src/css/vertical-layout-light/_navbar.scss
@@ -1,10 +1,10 @@
 .create-form-btn{   
- background-color: #ff6100;
-border-color: #ff6100;
+ background-color: #dc143c;
+border-color: #dc143c;
 padding: 2px;
 border-radius: 2px;
 outline: none;
-border: 1px solid #ff6100;
+border: 1px solid #dc143c;
 padding: 3px;
 padding-right: 18px;
 padding-left: 18px;
