--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import './css/vertical-layout-light/Register';
 @import './css/vertical-layout-light/Login';
 @import './css/vertical-layout-light/navbar';
