--- a/src/css/vertical-layout-light/Jotlink.scss
+++ b/src/css/vertical-layout-light/Jotlink.scss
@@ -39,7 +39,7 @@
 
 }
 .jotlist-light{
-  background: linear-gradient(270deg,#1F3BB3,#2e69ff 99.97%);
+  background: linear-gradient(270deg,#dc143c,#dc143c 99.97%);
 }
 .jot-link {
 	padding: 1rem 2rem 1.15rem;
