--- a/src/css/vertical-layout-light/_Login.scss
+++ b/src/css/vertical-layout-light/_Login.scss
@@ -3,64 +3,89 @@
     margin: auto;
     margin-top: 20px;
 }
-.brand-logo-main{
+
+.brand-logo-main {
     display: flex;
     justify-content: space-between;
     align-items: center;
     // margin-top: 30px;
     margin-bottom: 0rem !important;
 }
-.brand-logo1{
+
+.brand-logo1 {
     width: 197px !important;
     height: auto;
     margin-top: 25px;
     margin-bottom: 1rem !important;
 }
-.login-heading{
+
+.login-heading {
     padding-left: 14px;
     line-height: 23px;
 
 }
-.login-bg{
+
+.login-bg {
     background-color: #fff;
 }
-.brand-logo1 img{
+.login-here{
+    cursor: pointer;
+    color: #dc143c;
+}
+.login-here:hover{
+    cursor: pointer;
+    color: #f52b54 ;
+}
+.brand-logo1 img {
     width: 100% !important;
     height: auto;
 }
 
-.input-login{
+.field-icon {
+    position: absolute;
+    right: 13px;
+    top: 12px;
+    cursor: pointer;
+    z-index: 12;
+}
+
+.input-login {
     background-color: transparent !important;
     border: 1px solid #ced4da !important;
     // color: #20252a ;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out !important;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out !important;
 }
-.login-dark-text{
-    color:white !important;
+
+.login-dark-text {
+    color: white !important;
 }
-.login-light-text{
-    color:black !important;
+
+.login-light-text {
+    color: black !important;
 }
-.input-login-light:focus{
+
+.input-login-light:focus {
     background-color: transparent !important;
     border: 1px solid #ced4da !important;
     color: #20252a !important;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out !important;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out !important;
 }
-.input-login-dark:focus{
+
+.input-login-dark:focus {
     background-color: transparent !important;
     border: 1px solid #ced4da !important;
     color: #ffffff !important;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out !important;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out !important;
 }
-.input-login::target-text{
+
+.input-login::target-text {
     background-color: transparent !important;
     border: 1px solid #ced4da !important;
     color: #20252a !important;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out !important;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out !important;
 }
-.chart-width{
+
+.chart-width {
     width: 78%;
     margin: 7.5rem auto;
 }
-
