--- a/src/css/vertical-layout-light/_allform.scss
+++ b/src/css/vertical-layout-light/_allform.scss
@@ -4,12 +4,12 @@
 
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     background: #fafafa;
 }
 
 p {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 1.1em;
     font-weight: 300;
     line-height: 1.7em;
@@ -179,7 +179,7 @@ ul.CTAs a {
 
 .a.article,
 .a.article:hover {
-    background: #6d7fcc !important;
+    background: #f52b54 !important;
     color: #fff !important;
 }
 
@@ -230,7 +230,7 @@ ul.CTAs a {
 .navform li .drop {
     display: block;
     color: #fff;
-    background-color: #252d5b;
+    background-color: #DC143C;
     padding: 10px 20px;
     text-decoration: none;
 }
@@ -243,7 +243,7 @@ ul.CTAs a {
 }
 
 .navform li a:hover, .navform li .drop.dropdown-toggle.actives1 {
-    background-color: #252d5b;
+    background-color: #f52b54;
     color: #fff;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
