--- a/src/css/vertical-layout-light/_allform.scss
+++ b/src/css/vertical-layout-light/_allform.scss
@@ -47,9 +47,9 @@ a:focus {
     border-bottom: 1px dashed #ddd;
     margin: 40px 0;
 }
-.builder-sidebar{
-    display: none;
-}
+// .builder-sidebar{
+//     display: none;
+// }
 .allform-logo{
     width: 100%;
     height: auto;
@@ -85,7 +85,7 @@ a:focus {
     // background: #ECF0F1;
 }
 .card-header-tabs{
-    background-color: blue;
+    background-color: #dc143c;
 }
 #sidebars ul.components {
     padding: 20px 15px;
