--- a/src/css/vertical-layout-light/_jotform.scss
+++ b/src/css/vertical-layout-light/_jotform.scss
@@ -1,5 +1,5 @@
 .builder-sidebar_scroll {
-    background: #3e4652;
+    background: #dc143c;
 }
 
 .col-md-2 {
@@ -30,7 +30,7 @@
     color: white !important;
 }
 .formcomponent{
-    background-color: #616161 !important;
+    background-color: #dc143c !important;
 }
 .builder-sidebar .card{
     background-color: transparent;
