--- a/src/css/vertical-layout-light/_Preview.scss
+++ b/src/css/vertical-layout-light/_Preview.scss
@@ -795,7 +795,7 @@ color:black;
 .dot1 {
   height: 10px;
   width: 10px;
-  background-color: #1f3bb3;
+  background-color: #dc143c;
   border-radius: 50%;
   display: inline-block;
 }
