--- a/src/css/vertical-layout-light/style.css
+++ b/src/css/vertical-layout-light/style.css
@@ -13093,7 +13093,7 @@ fieldset:disabled .wizard > .actions a,
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color: #0d6efd;
+  color: #dc143c;
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
@@ -24072,7 +24072,7 @@ code {
 }
 
 .card.bg-primary, .settings-panel .color-tiles .card.tiles.primary {
-  background: #1F3BB3 !important;
+  background: #dc143c !important;
 }
 
 @media (min-width: 576px) {
@@ -32282,7 +32282,7 @@ padding-left: 16px;
   margin-bottom: 0;
   padding: 5px 25px;
   cursor: pointer;
-  border-bottom: 1px solid #dee2e6;
+  /* border-bottom: 1px solid #dee2e6; */
   line-height: 1;
 }
 
