--- a/src/css/vertical-layout-light/_allform.scss
+++ b/src/css/vertical-layout-light/_allform.scss
@@ -266,7 +266,7 @@ ul.CTAs a {
     border-top-right-radius: 0px;
 }
 .largest-list{
-    background-color: #252d5b;
+    background-color: #dc143c;
 }
 .navform li .dropdown-menu.actives1 {
     display: flex;
