--- a/src/css/vertical-layout-light/_Preview.scss
+++ b/src/css/vertical-layout-light/_Preview.scss
@@ -392,11 +392,14 @@
 .formpage_nav{
   width: 100%;
   height: 70px;
-  background: linear-gradient(270deg, #dc143c, #dc143c 99.97%);
+ 
 
   /* float: right; */
   display: flex;
   justify-content: space-between;
+}
+.formpage-nav-light{
+  background: linear-gradient(270deg, #dc143c, #dc143c 99.97%);
 }
 .formpage_first_div{
  margin-left: 40px;
