--- a/src/css/vertical-layout-light/_setting.scss
+++ b/src/css/vertical-layout-light/_setting.scss
@@ -106,7 +106,22 @@
     left: -40px;
   }
   /*----------------sidebar-wrapper----------------*/
-  
+  .moreoption-open{
+    display: flex;
+  }
+  .moreoption-close{
+    display: none;
+  }
+  .more-dropdownmenu{
+    position: absolute;
+    padding: 0;
+    margin: 0;
+    margin-top: 0px;
+    text-align: left;
+    right: 0px;
+    border: 1px solid #252d5b;
+    border-top-right-radius: 0px;
+  }
   .sidebar-wrapper2 {
     width: 310px;
     height: 100%;
