fixed login issue

--- a/src/css/vertical-layout-light/_Preview.scss
+++ b/src/css/vertical-layout-light/_Preview.scss
@@ -401,6 +401,9 @@
 .formpage-nav-light{
   background: linear-gradient(270deg, #dc143c, #dc143c 99.97%);
 }
+.login-btn-width{
+  width: 68%;
+}
 .formpage_first_div{
  margin-left: 40px;
  display: flex;
