--- a/src/css/vertical-layout-light/_setting.scss
+++ b/src/css/vertical-layout-light/_setting.scss
@@ -119,9 +119,10 @@
     margin-top: 0px;
     text-align: left;
     right: 0px;
-    border: 1px solid #252d5b;
+    border: 1px solid #dc143c;
     border-top-right-radius: 0px;
   }
+
   .sidebar-wrapper2 {
     width: 310px;
     height: 100%;
