--- a/src/css/vertical-layout-light/_Preview.scss
+++ b/src/css/vertical-layout-light/_Preview.scss
@@ -525,16 +525,16 @@
 .desktop_input{
   display: flex;
   justify-content: center;
-  width: 52%;
+  width: 100%;
   text-align: left;
-  padding-left: 8px;
+  padding: 18px;
 }
 .mobile_input{
   display: flex;
   justify-content: center;
-  width: 53%;
+  width: 100%;
   text-align: left;
-  padding-left: 8px;
+ padding: 18px;
 }
 .lastname_heading{
   visibility: hidden !important;
@@ -545,18 +545,19 @@
   
 }
 .input_field{
-  width: 300px;
+  width: 100%;
   border-radius: 10px;
   padding: 5px 10px;
 }
 .input_field_mob{
-  width: 268px;
+  width: 100%;
   border-radius: 10px;
   padding: 5px 10px;
 }
 
 .input_field-vertical{
-  width: 275px;
+  // width: 275px;
+  width: 100%;
   border-radius: 10px;
   padding: 5px 10px;
 }
@@ -700,7 +701,7 @@ label{
   border-radius: 10px;
 }
 .mobile_heading{
-  height: 125px;
+  // height: 125px;
   text-align: left;
   padding-top: 20px;
   padding-left: 20px;
@@ -721,7 +722,7 @@ div.mobile-border {
   overflow-y: auto !important;
   
   border: 1px solid #cccccc;
-  background-color: #f3f3f3;
+  background-color: #ffffff;
   
 }
 .formpage_desktop-mob-hor{
