--- a/src/css/vertical-layout-light/Jotlink.scss
+++ b/src/css/vertical-layout-light/Jotlink.scss
@@ -40,6 +40,8 @@
 }
 .jotlist-light{
   background: linear-gradient(270deg,#dc143c,#dc143c 99.97%);
+  position: fixed;
+  z-index: 1000;
 }
 .jot-link {
 	padding: 1rem 2rem 1.15rem;
