--- a/src/css/vertical-layout-light/_Preview.scss
+++ b/src/css/vertical-layout-light/_Preview.scss
@@ -402,7 +402,8 @@
   background: linear-gradient(270deg, #dc143c, #dc143c 99.97%);
 }
 .login-btn-width{
-  width: 68%;
+  width: 94%;
+  margin-right: 26px;
 }
 .formpage_first_div{
  margin-left: 40px;
