--- a/src/css/vertical-layout-light/_setting.scss
+++ b/src/css/vertical-layout-light/_setting.scss
@@ -139,6 +139,7 @@
     list-style-type: none;
     padding: 0;
     margin: 0;
+    align-items: center;
   }
   
   .sidebar-wrapper2 a {
@@ -310,9 +311,15 @@
   }
   .list-sidebar-jotform{
     border-bottom: 1px solid #3a3f48 !important;
-    background: #616161 !important;
+    
     margin: auto;
     margin-top: 5px;
+  }
+  .list-sidebarjotform{
+    background: #616161 !important;
+  }
+  .list-sidebar-focus{
+    background-color: #f52b54 ;
   }
   .list-sidebar-jotform[aria-expanded="true"]{
  background-color: #f52b54  !important;
