--- a/src/css/vertical-layout-light/_setting.scss
+++ b/src/css/vertical-layout-light/_setting.scss
@@ -85,7 +85,7 @@
     background: #dc143c;
   }
   .page-content{
-    height: 100vw;
+    height: 100%;
   }
   @media screen and (min-width: 768px) {
     .page-wrapper.toggled .page-content {
