--- a/src/css/vertical-layout-light/_Login.scss
+++ b/src/css/vertical-layout-light/_Login.scss
@@ -26,11 +26,14 @@
 }
 
 .login-heading {
-    padding-left: 14px;
+    // padding-left: 14px;
     line-height: 23px;
-
+    font-family: 'Montserrat', sans-serif;
 }
-
+.placeholder-login::placeholder{
+    padding: 1px; 
+    color:#aaa7a7 !important;
+}
 .login-bg {
     background-color: #fff;
 }
