--- a/src/css/vertical-layout-light/_Register.scss
+++ b/src/css/vertical-layout-light/_Register.scss
@@ -150,7 +150,7 @@ input {
 .btn-default {
     color: #fff;
     background-color: #DC143C;
-    border-color: #DC143C;
+    border: none;
     padding: 5px;
     padding-left: 12px;
     padding-right: 12px;
@@ -221,7 +221,7 @@ color: black;
 .hover-text-white {
     background: #dc143c !important;
     border: 1px solid #dc143c;
-    padding: 8px 32px;
+    padding: 8px 18px;
     font-size: 20px;
     line-height: 1.3333333;
     border-radius: 6px;
@@ -231,7 +231,7 @@ color: black;
 .hover-text-white:hover {
     background: #f52b54 ;
     border: 1px solid #f52b54 ;
-    padding: 8px 32px;
+    padding: 8px 18px;
     font-size: 20px;
     line-height: 1.3333333;
     border-radius: 6px;
