--- a/src/css/vertical-layout-light/style.css
+++ b/src/css/vertical-layout-light/style.css
@@ -31416,7 +31416,8 @@ height: auto;
 }
 
 .auth form .form-group label {
-  font-size: .8125rem;
+  font-size: 16px;
+  font-weight: 600;
 }
 
 .auth form .form-group .form-control, .auth form .form-group .asColorPicker-input, .auth form .form-group .dataTables_wrapper select, .dataTables_wrapper .auth form .form-group select, .auth form .form-group .jsgrid .jsgrid-table .jsgrid-filter-row input[type=text], .jsgrid .jsgrid-table .jsgrid-filter-row .auth form .form-group input[type=text],
@@ -31427,7 +31428,9 @@ height: auto;
   border-radius: 0;
   font-size: .9375rem;
 }
-
+.auth form .form-group .form-control{
+  border-radius: 4px;
+}
 .auth form .auth-form-btn {
   padding: 1rem 3rem;
   line-height: 1.5;
