--- a/src/css/vertical-layout-light/_Preview.scss
+++ b/src/css/vertical-layout-light/_Preview.scss
@@ -31,9 +31,9 @@
 }
 .Preview{
     color: #fff;
-    min-width: 20px !important;
+    // min-width: 20px !important;
     font-size: 14px !important;
-    margin-left: -75px;
+    // margin-left: -75px;
     padding-top: 16px !important;
     justify-content: space-around;
   }
