--- a/src/css/vertical-layout-light/_setting.scss
+++ b/src/css/vertical-layout-light/_setting.scss
@@ -745,10 +745,17 @@ padding: 0px;
   margin: 0px !important;
  }
  .jotlogo-header{
-  width: 48%;
+  width: 20%;
     padding-top: 4px;
     background: #ffff;
     padding: 6px;
+ }
+ .jotlogo-width{
+  width: 270px;
+ }
+ .preview-div-switch{
+  width: 182px;
+  margin-left: 57px;
  }
  .link_c{
   left: 10px;
