--- a/src/css/vertical-layout-light/_Register.scss
+++ b/src/css/vertical-layout-light/_Register.scss
@@ -179,6 +179,9 @@ input {
 .formbuilder-light div div .formbuilder  .formarea .formio-component .formio-form .builder-components .builder-component .formio-component label{
 color: black;
 }
+.formbuilder{
+    top: 54px;
+}
 .has-feedback .form-control{
     padding-left: 14px !important;
 }
