--- a/src/css/vertical-layout-light/_allform.scss
+++ b/src/css/vertical-layout-light/_allform.scss
@@ -135,19 +135,24 @@ a:focus {
     // background: #e0e0e0;
     border-radius: 4px;
 }
-.allform-list:hover{
-    background-color: #f52b54  !important;
+
+.allform-list:hover {
+    background-color: #f52b54 !important;
 }
-.allform-list-focus1{
-    background-color: #f52b54  !important;
+
+.allform-list-focus1 {
+    background-color: #f52b54 !important;
 }
-.allform-list-focusnone{
+
+.allform-list-focusnone {
     background: #616161 !important;
 }
-.allform-list-focus1:focus{
-    background-color: #f52b54  !important;
+
+.allform-list-focus1:focus {
+    background-color: #f52b54 !important;
     color: #ffffff !important;
-     }
+}
+
 // .right-nav{
 //     display: none;
 // }
@@ -174,6 +179,10 @@ a[aria-expanded="true"] {
 
 a[data-toggle="collapse"] {
     position: relative;
+}
+
+.dark-mode-click-text {
+    margin-top: 66px;
 }
 
 .dropdown-toggle::after {
@@ -322,20 +331,49 @@ ul.CTAs a {
     color: white !important;
 }
 
-.allform-bg-color{
+.allform-bg-color {
     background-color: #dc143c;
 }
-.allform-list{
+
+.allform-list {
     padding: 14px;
-   
+
     color: white;
     margin-top: 3px;
 }
-.allform-list div:focus{
-    background:red !important;
+
+.allform-list div:focus {
+    background: red !important;
 }
+
 @media screen and (min-device-width: 2530px) and (max-device-width: 2580px) {
     .dot-vertical {
         margin: 0px 0px 0px 111px !important;
     }
+
+    .jotlogo-width {
+        width: 534px !important;
+    }
+
+    .preview-div-switch {
+        margin-left: 262px !important;
+    }
+
+    .formbuilder-light {
+        height: 100vh !important;
+    }
+
+    .builder-sidebar_scroll {
+        height: 100vh !important;
+    }
+    .sidebar-wrapper2{
+        width: 536px !important;
+    }
+}
+
+.builder-sidebar_scroll {
+    height: 100vh !important;
+}
+.formbuilder-light {
+    height: 100vh !important;
 }
