--- a/src/css/vertical-layout-light/_allform.scss
+++ b/src/css/vertical-layout-light/_allform.scss
@@ -369,6 +369,15 @@ ul.CTAs a {
     .sidebar-wrapper2{
         width: 536px !important;
     }
+    // .setting_form_ml{
+    //     margin-left: 27% !important;
+    // }
+    .ml_contain{
+        margin-left: 29% !important;
+    }
+    .settingform-main{
+        margin-left: 20%;
+    }
 }
 
 .builder-sidebar_scroll {
